--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxtjs/i18n": "8.0.0-beta.10",
     "@nuxtjs/tailwindcss": "^6.2.0",
     "@pinia/nuxt": "^0.4.11",
+    "firebase": "^9.23.0",
     "nuxt-headlessui": "^1.1.4",
     "postcss-custom-properties": "^13.1.1"
   }
