--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@pinia/nuxt": "^0.4.11",
     "firebase": "^9.23.0",
     "nuxt-headlessui": "^1.1.4",
-    "postcss-custom-properties": "^13.1.1"
+    "postcss-custom-properties": "^13.1.1",
+    "vee-validate": "^4.10.3"
   }
 }
