--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "@nuxtjs/i18n": "8.0.0-beta.10",
     "@nuxtjs/tailwindcss": "^6.2.0",
     "@pinia/nuxt": "^0.4.11",
+    "@vee-validate/nuxt": "^4.10.3",
     "firebase": "^9.23.0",
     "nuxt-headlessui": "^1.1.4",
-    "postcss-custom-properties": "^13.1.1",
-    "vee-validate": "^4.10.3"
+    "postcss-custom-properties": "^13.1.1"
   }
 }
