--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nuxtjs/tailwindcss": "^6.2.0",
     "@pinia/nuxt": "^0.4.11",
     "@vee-validate/nuxt": "^4.10.3",
+    "@vee-validate/rules": "^4.10.3",
     "firebase": "^9.23.0",
     "nuxt-headlessui": "^1.1.4",
     "postcss-custom-properties": "^13.1.1"
